--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,5 +2,6 @@ per_page: 10
 width_limit: 400
 height_limit: 400
 size_avatar: "85x85"
+avatar_user: "120x120"
 size_book: "170x170"
 size_avatar_comment: "60x60"
